dimagi-SalesforceFB/src/objects/PRO_Contract_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Used__c</fullName>
        <label>% Budget Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Buffer_By_Deliverables_Complete__c</fullName>
        <label>Buffer % by Deliverables Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>DContract__c</referenceTo>
        <relationshipLabel>PRO Contract Snapshot</relationshipLabel>
        <relationshipName>PRO_Contract_Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Execution_Efficiency__c</fullName>
        <label>Execution Efficiency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Buffer__c</fullName>
        <label>Expected % Buffer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expense_And_Travel_Spend__c</fullName>
        <label>Expense &amp; Travel Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Income_By_Deliverables_Complete__c</fullName>
        <label>Net Income by Deliverables Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_Of_Work_Completed__c</fullName>
        <label>% of Work Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Services_Budget_For_GS__c</fullName>
        <label>% Services budget for GS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Spend__c</fullName>
        <label>Product Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Services_Spend__c</fullName>
        <label>Services Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Calculated_Costs__c</fullName>
        <label>Total Calculated Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PRO Contract Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PRO Contract Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRO Contract Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>